--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
     <groupId>com.riverluoo</groupId>
     <artifactId>lib</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -45,6 +46,12 @@
             <artifactId>UserAgentUtils</artifactId>
             <version>${user-Agent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+
 
     </dependencies>
 
